--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
   "lang": "es",
   "dir": "ltr",
   "id": "com.alx17xd.lastroad",
-  "start_url": "/Last-Road/index.html",
-  "scope": "/Last-Road/",
+  "start_url": "/Last-Road-main/index.html",
+  "scope": "/Last-Road-main/",
   "display": "standalone",
   "display_override": ["window-controls-overlay", "tabs", "minimal-ui"],
   "background_color": "#000000",
@@ -15,14 +15,13 @@
   "categories": ["games", "racing", "arcade", "entertainment"],
 
   "icons": [
-    
     {
-      "src": "Last-Road-main/icons/iconsicon-192.png.jpg",
+      "src": "/Last-Road-main/icons/iconsicon-192.png.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpeg"
     },
     {
-      "src": "Last-Road-main/icons/icons/icon-512-maskable.png",
+      "src": "/Last-Road-main/icons/icons/icon-512-maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -31,33 +30,33 @@
 
   "screenshots": [
     {
-      "src": "Last-Road-main/screenshots/cap5.jpg",
+      "src": "/Last-Road-main/screenshots/cap1.jpg",
       "sizes": "1280x720",
-      "type": "image/png",
+      "type": "image/jpeg",
       "label": "Jugando en la carretera"
     },
     {
-      "src": "Last-Road-main/screenshots/cap2.jpg",
+      "src": "/Last-Road-main/screenshots/cap2.jpg",
       "sizes": "1280x720",
-      "type": "image/png",
+      "type": "image/jpeg",
       "label": "Fin del juego / Game Over"
     },
     {
-      "src": "Last-Road-main/screenshots/cap3.png",
+      "src": "/Last-Road-main/screenshots/cap3.png",
       "sizes": "1280x720",
       "type": "image/png",
       "label": "Tabla de puntuaciones"
     },
     {
-      "src": "Last-Road-main/screenshots/cap4.png",
+      "src": "/Last-Road-main/screenshots/cap4.png",
       "sizes": "1280x720",
       "type": "image/png",
-      "label": "Mapa de niveles"
+      "label": "Fondo del juego"
     },
     {
-      "src": "Last-Road-main/screenshots/cap1.jpg",
+      "src": "/Last-Road-main/screenshots/cap5.jpg",
       "sizes": "1280x720",
-      "type": "image/png",
+      "type": "image/jpeg",
       "label": "Logo del juego"
     }
   ],
@@ -67,15 +66,15 @@
       "name": "Jugar ahora",
       "short_name": "Jugar",
       "description": "Ir directamente al modo de juego principal",
-      "url": "/Last-Road/game.html",
-      "icons": [{ "src": "/Last-Road/icons/play.png", "sizes": "96x96" }]
+      "url": "/Last-Road-main/index.html",
+      "icons": [{ "src": "/Last-Road-main/icons/play.png", "sizes": "96x96" }]
     },
     {
       "name": "Tabla de puntuaciones",
       "short_name": "Puntuaciones",
       "description": "Consulta los mejores puntajes del juego",
-      "url": "/Last-Road/scores.html",
-      "icons": [{ "src": "/Last-Road/icons/trophy.png", "sizes": "96x96" }]
+      "url": "/Last-Road-main/scores.html",
+      "icons": [{ "src": "/Last-Road-main/icons/trophy.png", "sizes": "96x96" }]
     }
   ],
 
