--- a/manifest.json
+++ b/manifest.json
@@ -13,23 +13,25 @@
   "theme_color": "#1a1a1a",
   "orientation": "landscape",
   "categories": ["games", "racing", "arcade", "entertainment"],
-
+  
   "icons": [
     {
       "src": "/Last-Road-main/icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/Last-Road-main/icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/Last-Road-main/icons/icon-512-maskable.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     }
   ],
 
@@ -38,31 +40,36 @@
       "src": "/Last-Road-main/screenshots/cap1.jpg",
       "sizes": "1280x720",
       "type": "image/jpeg",
-      "label": "Jugando en la carretera"
+      "label": "Jugando en la carretera",
+      "platform": "wide"
     },
     {
       "src": "/Last-Road-main/screenshots/cap2.jpg",
       "sizes": "1280x720",
       "type": "image/jpeg",
-      "label": "Fin del juego / Game Over"
+      "label": "Fin del juego / Game Over",
+      "platform": "wide"
     },
     {
       "src": "/Last-Road-main/screenshots/cap3.png",
       "sizes": "1280x720",
       "type": "image/png",
-      "label": "Tabla de puntuaciones"
+      "label": "Tabla de puntuaciones",
+      "platform": "wide"
     },
     {
       "src": "/Last-Road-main/screenshots/cap4.png",
       "sizes": "1280x720",
       "type": "image/png",
-      "label": "Pantalla de juego"
+      "label": "Pantalla de juego",
+      "platform": "wide"
     },
     {
       "src": "/Last-Road-main/screenshots/cap5.jpg",
       "sizes": "1280x720",
       "type": "image/jpeg",
-      "label": "Logo del juego"
+      "label": "Logo del juego",
+      "platform": "wide"
     }
   ],
 
@@ -105,7 +112,7 @@
     }
   ],
   "prefer_related_applications": false,
-  "iarc_rating_id": "YOUR-IARC-RATING-ID",
+  "iarc_rating_id": "UNKNOWN",
 
   "file_handlers": [
     {
@@ -126,9 +133,7 @@
   },
 
   "scope_extensions": [
-    {
-      "origin": "https://alx17xd.github.io"
-    }
+    {"origin": "https://alx17xd.github.io"}
   ],
 
   "widgets": [],
