--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,9 @@
   "scope": "/Last-Road-main/",
   "display": "standalone",
   "display_override": ["window-controls-overlay", "tabs", "minimal-ui"],
-  "orientation": "landscape",
   "background_color": "#000000",
   "theme_color": "#1a1a1a",
+  "orientation": "landscape",
   "categories": ["games", "racing", "arcade", "entertainment"],
 
   "icons": [
@@ -40,31 +40,36 @@
       "src": "/Last-Road-main/screenshots/cap1.jpg",
       "sizes": "1280x720",
       "type": "image/jpeg",
-      "label": "Jugando en la carretera"
+      "label": "Jugando en la carretera",
+      "platform": "wide"
     },
     {
       "src": "/Last-Road-main/screenshots/cap2.jpg",
       "sizes": "1280x720",
       "type": "image/jpeg",
-      "label": "Fin del juego / Game Over"
+      "label": "Fin del juego / Game Over",
+      "platform": "wide"
     },
     {
       "src": "/Last-Road-main/screenshots/cap3.png",
       "sizes": "1280x720",
       "type": "image/png",
-      "label": "Tabla de puntuaciones"
+      "label": "Tabla de puntuaciones",
+      "platform": "wide"
     },
     {
       "src": "/Last-Road-main/screenshots/cap4.png",
       "sizes": "1280x720",
       "type": "image/png",
-      "label": "Pantalla de juego"
+      "label": "Pantalla de juego",
+      "platform": "wide"
     },
     {
       "src": "/Last-Road-main/screenshots/cap5.jpg",
       "sizes": "1280x720",
       "type": "image/jpeg",
-      "label": "Logo del juego"
+      "label": "Logo del juego",
+      "platform": "wide"
     }
   ],
 
@@ -74,14 +79,14 @@
       "short_name": "Jugar",
       "description": "Ir directamente al modo de juego principal",
       "url": "/Last-Road-main/index.html",
-      "icons": [{ "src": "/Last-Road-main/icons/play.png", "sizes": "96x96", "type": "image/png" }]
+      "icons": [{ "src": "/Last-Road-main/icons/play.png", "sizes": "96x96" }]
     },
     {
       "name": "Tabla de puntuaciones",
       "short_name": "Puntuaciones",
       "description": "Consulta los mejores puntajes del juego",
       "url": "/Last-Road-main/scores.html",
-      "icons": [{ "src": "/Last-Road-main/icons/trophy.png", "sizes": "96x96", "type": "image/png" }]
+      "icons": [{ "src": "/Last-Road-main/icons/trophy.png", "sizes": "96x96" }]
     }
   ],
 
@@ -107,7 +112,7 @@
     }
   ],
   "prefer_related_applications": false,
-  "iarc_rating_id": "UNRATED",
+  "iarc_rating_id": "9+",
 
   "file_handlers": [
     {
@@ -133,6 +138,5 @@
 
   "widgets": [],
   "note_taking": {},
-  "protocol_handlers": [],
-  "handle_links": "preferred"
+  "protocol_handlers": []
 }
